--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* RESETEO Y CONFIGURACIÓN GENERAL */
+/* reseteo y configuracion principal */
 * {
     margin: 0;
     padding: 0;
@@ -6,20 +6,22 @@
     font-family: 'Segoe UI', sans-serif;
 }
 
+/* propiedades para el fondo principal */
 body {
     background-color: #effff5;
 }
 
-/* NAVBAR SUPERIOR */
+/* nav superior*/
 .navbar {
     width: 100%;
     padding: 30px;
     position: relative;
-    z-index: 1;
+    z-index: 1; /* posicionar el nav por encima del fondo */
 }
 
+/* estilos para la lista del nav */
 .navbar ul {
-    list-style: none;
+    list-style: none; /* quitarle los estilos por defecto a la lista */
     margin-left: 40px;
 }
 
@@ -36,6 +38,10 @@ body {
     text-decoration: none;
     color: #2a6d69;
     font-weight: bold;
+}
+
+a:hover{
+  color: #000000;
 }
 
 .contact-phone {
@@ -56,7 +62,13 @@ body {
     margin-top: -15px;
 }
 
+.number:hover{
+  color: #000000;
+  font-size: 18px;
+}
+
 /* BARRA LATERAL IZQUIERDA */
+
 .barlateralizq {
     position: fixed;
     top: 0;
@@ -102,22 +114,24 @@ body {
 .container {
     width: 1100px;
     height: 490px;
-    margin: 20px auto;
     background: #ffffff;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     padding: 40px;
     overflow: hidden;
     position: relative;
+    margin: 0 auto;
 }
 
 /* SECCIÓN IZQUIERDA */
 .izquierda {
     float: left;
-    width: 50%;
-    height: 100%;
+    width: 510px;
+    height: 500px;
     position: relative;
-    background-color: #396969; /* Un verde similar al resultado del filtro */
+    background-color: #0a4747; 
     z-index: 1;
+    top:-40px;
+    left: -40px;
 
 }
 
@@ -126,9 +140,10 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 500px;
     object-fit: cover;
     z-index: 1;
+    opacity: 0.3;
 }
 
 /* Superposición del contenido */
@@ -137,46 +152,76 @@ body {
 .izquierda .buttons {
     position: absolute;
     z-index: 2;
-    color: white;
     text-align: center;
     width: 100%;
 }
 
 .izquierda h1 {
-    top: 20%;
+    top: 30%;
     margin-left: 30px;
     text-align: justify;
-    font-size: 2rem;
-    color: #b6b6b6;
+    font-size: 40px;
+    color: #ffffff;
 }
 
 .izquierda p {
-    top: 50%;
-    left: 5px;
+    bottom: 150px;
+    left: 25px;
     font-size: 1rem;
     text-align: justify;
     padding: 0 20px;
     width: calc(100% - 60px);
-    color:#e6e6e6
+    color:#e6e6e6;
+    margin: 0 auto;
+}
+
+.subtitulo{
+  color: #1ea878;
+  font-size: 35px;
 }
 
 .buttons {
-    bottom: 80px;
-    left: -120px;
-    width: 100%;
+    bottom: 45px;
+    left: -80px;
+    /* width: 100%; */
+    padding-right: 20px;
+    margin-left: 30px;
 }
 
 /* Botones */
-.btnprimary,
-.btnsecondary {
+.btnprimary, 
+.btnsecondary{
+    height: 40px;
+    width: 120px;
     text-align: center;
     border-radius: 20px;
-    background-color: #00b074;
-    height: 40px;
-    width: 100px;
-    border: none;
+    font-size: medium;
     text-decoration: none;
+    margin: 20px;
 }
+
+.btnprimary{
+    border: none; 
+    background-color: #00b074;
+    color:white;
+}
+.btnprimary:hover{
+  background-color: transparent;
+  border: 2px solid #000000;
+  color: #ffffff;
+}
+.btnsecondary{
+  background-color: transparent;
+  border: 2px solid #1ea878;
+  color: #ffffff;
+}
+.btnsecondary:hover{
+  margin: 20px;
+  background-color: #289e77;
+  border:none;
+}
+
+
 
 /* SECCIÓN DERECHA */
 .derecha {
@@ -189,7 +234,16 @@ body {
 
 .derecha h2 {
     color: #00b074;
+    margin: 0 auto;
     margin-bottom: 30px;
+}
+
+.name {
+  font-size: 12px;
+  color: #9ca5a5;
+}
+.data {
+  margin-top: 20px;
 }
 
 /* FORMULARIO */
@@ -198,18 +252,18 @@ form {
 }
 
 input {
-    padding: 12px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    width: 100%;
-    margin-bottom: 15px;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  width: 100%;
+  margin-bottom: 15px; 
+  background-color: #d1d1d1;
+  border: none;
+  outline: none;
 }
 
-/* Grupo de campos en línea */
 .form-group::after {
-    content: "";
-    display: table;
-    clear: both;
+  background-color: gray;
 }
 
 .form-group input {
@@ -221,8 +275,25 @@ input {
     margin-right: 4%;
 }
 
-@media (max-width: 720px) {
+.btn-primary{
+  height: 40px;
+  width: 120px;
+  text-align: center;
+  border-radius: 20px;
+  font-size: medium;
+  text-decoration: none;
+  background-color: #1ea878;
+  border: none;
+  color: #ffffff;
+}
 
+.btn-primary:hover{
+  background-color: transparent;
+  border: 2px solid #000000;
+  color: #0a4747;
+}
+
+@media (max-width: 720px) {
     header {
         width: 20px;
         font-size: 5px;
@@ -245,8 +316,7 @@ input {
 
     .navbar li:last-child {
         margin-right: 0; }
-    
-    
+
     .contact-phone {
         position: absolute;
         right: 40px;
